--- a/Ejercicios/ejercicio21.html
+++ b/Ejercicios/ejercicio21.html
@@ -26,6 +26,7 @@
                         fin++;
                     }
                     fin == maximo ? repetido = -1 : false;
+                    //Probando el repo de javascripte
                 }
             }
         }
